--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body class="w-100 h-100">
     <main class="w-100 h-100">
-    <div class="position-absolute w-100 mt-3 sm md">
+    <div class="position-absolute w-100">
     <tw-story></tw-story>
     </div>
 
