--- a/index.html
+++ b/index.html
@@ -58,7 +58,43 @@
     [[Lucero del Alba]]</tw-passagedata><tw-passagedata pid="19" name="Botella rota" tags="" position="425,416">Nuestra protagonista se acerca al grupo de tipos que comienza a aullar y gritarle cosas.
     - ¿Qué dijeron? - dice la piba mientras los apunta con una botella rota.- A ver si son tan machos ahora, ¿Qué querían decirme?
     - Nada, señorita, buenas noches - dice uno de los tipos.
-    La piba sigue su camino con la botella y a unas cuadras de llegar a su casa siente [[un calor en la mano]].</tw-passagedata><tw-passagedata pid="20" name="Barril de desecho radioactivo" tags="" position="658,330">La piba ve un gran barril de una sustancia verde brillante que emite un sutil destello. Sin pensarlo un segundo, [[se sumerge]].</tw-passagedata><tw-passagedata pid="21" name="&quot;Sabés que querés.&quot;" tags="" position="786,1159">La piba avanza contra el grupo de chabones con las manos vacías.
+    La piba sigue su camino con la botella y a unas cuadras de llegar a su casa siente [[un calor en la mano]].</tw-passagedata><tw-passagedata pid="20" name="Barril de desecho radioactivo" tags="" position="658,330">La piba ve un gran barril de una sustancia verde brillante que emite un sutil destello. Sin pensarlo un segundo, [[se sumerge]].
+      
+      <!-- PRUEBA BARRIL RADIOACTIVO-->
+
+      <div id="barrilRadioactivo"></div>
+<style>
+  #barrilRadioactivo {
+    width: 160px;
+    height: 144px;
+    background-image: url(img/barrilsprite.png);
+
+    position: fixed;
+    left: 50%;
+    bottom: -1%;
+    transform: translate(-50%, -30%);
+    margin: 0 auto;
+  }
+  
+      #barrilRadioactivo:hover{
+        width: 160px;
+        height: 144px;
+        background-image: url(img/barrilsprite.png);
+        animation: playX 1s steps(4) infinite,
+             playY 1s steps(1) infinite;
+                   }
+        @keyframes playX {
+      from {background-position-x: 0px;}
+      to {background-position-x: -675px;}
+    }
+  
+    @keyframes playY {
+      from {background-position-y: 0px;}
+      to {background-position-y: -144px;}
+    }
+  </style>
+
+    </tw-passagedata><tw-passagedata pid="21" name="&quot;Sabés que querés.&quot;" tags="" position="786,1159">La piba avanza contra el grupo de chabones con las manos vacías.
     - ¿Algun otro comentario  para agregar o ya se cansaron?
     - No te enojes, linda. Vení, charlemos tranca. 
     - ¿Cómo no me voy a enojar? Si me tengo que fumar a los giles como vos y tus amigos desde siempre.
