Subo mis cambios y resuelvo conflictos

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <body class="w-100 h-100">
     <main class="w-100 h-100 d-flex align-items-center justify-content-center">
-    <div class="position-absolute w-100">
+    <div class="position-absolute w-100 top:0;">
     <tw-story></tw-story>
     </div>
 
@@ -64,34 +64,7 @@
 
       <div id="barrilRadioactivo"></div>
 <style>
-  #barrilRadioactivo {
-    width: 160px;
-    height: 144px;
-    background-image: url(img/barrilsprite.png);
-
-    position: fixed;
-    left: 50%;
-    bottom: -1%;
-    transform: translate(-50%, -30%);
-    margin: 0 auto;
-  }
   
-      #barrilRadioactivo:hover{
-        width: 160px;
-        height: 144px;
-        background-image: url(img/barrilsprite.png);
-        animation: playX 1s steps(4) infinite,
-             playY 1s steps(1) infinite;
-                   }
-        @keyframes playX {
-      from {background-position-x: 0px;}
-      to {background-position-x: -675px;}
-    }
-  
-    @keyframes playY {
-      from {background-position-y: 0px;}
-      to {background-position-y: -144px;}
-    }
   </style>
 
     </tw-passagedata><tw-passagedata pid="21" name="&quot;Sabés que querés.&quot;" tags="" position="786,1159">La piba avanza contra el grupo de chabones con las manos vacías.
