Subo imagenes de sprites, agrego cosas al HTML y CSS

--- a/historia.html
+++ b/historia.html
@@ -55,12 +55,18 @@
     [[Algo vibra en el bolsillo]]</tw-passagedata><tw-passagedata pid="18" name="Algo vibra en el bolsillo" tags="" position="226,380">Desliza los dedos dentro de la campera y se encuentra que las vibraciones provienen de su Defengochi: una botonera que se activa al detectar que su usuarix se siente en peligro. La instalación es muy simple: Se inserta debajo de la piel un pequeño chip detrás de la oreja izquierda y se vincula con el dispositivo. El procedimiento dura menos de media hora y la curación total requiere entre una y dos semanas. El Defengochi es liviano, discreto y de código abierto. La última versión permite tener dos armas programables a la vez, pudiendo elegir entre las 647 que existen actualmente y también teniendo la posibilidad de que sus usuarixs desarrollen las propias. 
 
     [[Feminasidrone]]
-    [[Lucero del Alba]]</tw-passagedata><tw-passagedata pid="19" name="Botella rota" tags="" position="425,416">Nuestra protagonista se acerca al grupo de tipos que comienza a aullar y gritarle cosas.
+    [[Lucero del Alba]]
+  
+    <!-- DEFENGOCHI -->
+
+    <div id="defengochi"></div>
+  
+  </tw-passagedata><tw-passagedata pid="19" name="Botella rota" tags="" position="425,416">Nuestra protagonista se acerca al grupo de tipos que comienza a aullar y gritarle cosas.
     - ¿Qué dijeron? - dice la piba mientras los apunta con una botella rota.- A ver si son tan machos ahora, ¿Qué querían decirme?
     - Nada, señorita, buenas noches - dice uno de los tipos.
     La piba sigue su camino con la botella y a unas cuadras de llegar a su casa siente [[un calor en la mano]].</tw-passagedata><tw-passagedata pid="20" name="Barril de desecho radioactivo" tags="" position="658,330">La piba ve un gran barril de una sustancia verde brillante que emite un sutil destello. Sin pensarlo un segundo, [[se sumerge]].
       
-      <!-- PRUEBA BARRIL RADIOACTIVO-->
+      <!-- BARRIL RADIOACTIVO-->
 
       <div id="barrilRadioactivo"></div>
 <style>
@@ -79,7 +85,13 @@
     [[Desde arriba saluda al grupo de tipos que la miran con asombro.]] 
     </tw-passagedata><tw-passagedata pid="24" name="Lucero del Alba" tags="" position="293,515">Al presionar Lucero del Alba, el Defengochi se convierte en una reversión cyberpunk del arma medieval: Un mango de madera que sostiene una cadena y una bola con pinches. Solo que esta vez, al ser holográfica, el arma se camufla en la oscuridad de la noche. 
     La piba sigue caminando, aferrada a su Lucero del Alba.
-    [[&quot;Hola herrrmosaaaa&quot;]]</tw-passagedata><tw-passagedata pid="25" name="Desde arriba saluda al grupo de tipos que la miran con asombro." tags="" position="110,677">La nube sobrevuela el barrio. La piba ve la línea naranja del amanecer recortándose sobre las casas hacia el este. Cuando llegan a la terraza de su casa, la nube comienza a descender con suavidad mientras se evapora. Nuestra amiga baja y se mete a su cama.
+    [[&quot;Hola herrrmosaaaa&quot;]]
+  
+  <!-- LUCERO DEL ALBA-->
+
+  <div id="luceroDelAlba"></div>
+
+  </tw-passagedata><tw-passagedata pid="25" name="Desde arriba saluda al grupo de tipos que la miran con asombro." tags="" position="110,677">La nube sobrevuela el barrio. La piba ve la línea naranja del amanecer recortándose sobre las casas hacia el este. Cuando llegan a la terraza de su casa, la nube comienza a descender con suavidad mientras se evapora. Nuestra amiga baja y se mete a su cama.
 
     [[Fin]]</tw-passagedata><tw-passagedata pid="26" name="&quot;Hola herrrmosaaaa&quot;" tags="" position="300,677">[[&quot;Que linda que sos eh&quot;]]
     </tw-passagedata><tw-passagedata pid="27" name="&quot;Que linda que sos eh&quot;" tags="" position="293,817">&quot;A ver, una sonrisita?&quot;
