--- a/caja.html
+++ b/caja.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
 
   </head>
-  <body>
+  <body class="gradienteAzul">
     
     <div class = "text-center">
         <h1>Caja de herramientas</h1>
