--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Una piba camina a su casa de noche</title>
   </head>
 
-  <body>
+  <body class="sinGradienteAzul">
     <div id="anim" class="w-100 h-100"></div>
 
     
