agrego historia.html

--- a/historia.html
+++ b/historia.html
@@ -18,7 +18,7 @@
 </head>
 
 
-<body class="w-100 h-100 gradienteAzul">
+<body class="w-100 h-100">
   <div id="anim"></div>
     <main class="w-100 h-100 d-flex align-items-center justify-content-center">
     <div class="position-absolute w-100 top:0;">
@@ -69,6 +69,7 @@
     La piba sigue su camino con la botella y a unas cuadras de llegar a su casa siente [[un calor en la mano]].</tw-passagedata><tw-passagedata pid="20" name="Barril de desecho radioactivo" tags="" position="658,330">La piba ve un gran barril de una sustancia verde brillante que emite un sutil destello. Sin pensarlo un segundo, [[se sumerge]].
       
       <!-- BARRIL RADIOACTIVO-->
+
       <div class="barrilRadioactivo"></div>
      
 <style>
