--- a/historia.html
+++ b/historia.html
@@ -18,7 +18,7 @@
 </head>
 
 
-<body class="w-100 h-100">
+<body class="w-100 h-100 gradienteAzul">
   <div id="anim"></div>
     <main class="w-100 h-100 d-flex align-items-center justify-content-center">
     <div class="position-absolute w-100 top:0;">
