arreglo gif explosion

--- a/historia.html
+++ b/historia.html
@@ -117,7 +117,7 @@
     <tw-passagedata pid="33" name="estalla" tags="" position="658,630">[[¡BOOM!]]
 
       <!-- EXPLOSION -->
-      <img src="/img/sprite/explosion.gif" alt="explosion" id="gif5" class="explosion">
+      <img src="/img/sprite/explosion.gif" alt="" id="gif5" class="explosion">
 
     </tw-passagedata>
     
