arreglo gif explosion

--- a/historia.html
+++ b/historia.html
@@ -118,7 +118,8 @@
     <tw-passagedata pid="33" name="estalla" tags="" position="658,630">[[¡BOOM!]]
 
       <!-- EXPLOSION -->
-      <img src="/img/sprite/explosion.gif" alt="explosion" id="gif5" class="explosion">
+      <div class="explosion"></div>
+
 
     </tw-passagedata>
     
