--- a/caja.html
+++ b/caja.html
@@ -2,7 +2,7 @@
     <title>Caja de herramientas</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="stylo.css">
     <meta charset="utf-8">
 
   </head>
@@ -11,7 +11,8 @@
     <div class = "text-center">
         <h1>Caja de herramientas</h1>
         <img src="img/toolkit.png" class="img-fluid" alt="Pixel art de una caja de herramientas">
-        <p> Una piba camina a su casa de noche es una historia interactiva desarrollada por Agus Las Peñas y Jael Caiero, desarrollada en 2021 en la cátedra de Tecnología Hipermedial de Licenciatura de Artes Electrónicas (UNTREF) e inspirada, entre otras cosas, por: </p>
+        <div class="container-sm">
+        <p> Una piba camina a su casa de noche es una historia interactiva desarrollada por Agus Las Peñas y Jael Caiero, desarrollada en 2021 en la cátedra de Tecnología Hipermedial de Licenciatura de Artes Electrónicas (UNTREF) e inspirada, entre otras cosas, por: </p></div>
         <ul>
             <li><a href="https://zoowoman.website/wp/movies/una-chica-vuelve-a-casa-sola-de-noche/">Ana Lily Amirpour</a></li>
             <li><a href="https://w.itch.io/">Anna Anthropy</a></li>
@@ -24,6 +25,7 @@
             <li><a href="http://slimedaughter.com">Porpentine</a></li>
           </ul>
           <p>¡Gracias por jugar!</p>
+          <img src="img/avatar.png" alt="Avatar de Agus y Jael">
 
           <a href="index.html">Inicio</a>
 
