--- a/historia.html
+++ b/historia.html
@@ -20,6 +20,9 @@
 <body class="w-100 h-100 gradienteAzul">
 
 <body class="w-100 h-100 gradienteAzul">
+  <audio src="/sound/unapiba.mp3" id="audioJuego"></audio>
+  <script src="audioPlay.js"></script>
+  
   <div id="anim"></div>
     <main class="w-100 h-100 d-flex align-items-center justify-content-center">
     <div class="position-absolute w-100 top:0;">
