--- a/historia.html
+++ b/historia.html
@@ -20,7 +20,7 @@
 <body class="w-100 h-100 gradienteAzul">
 
 <body class="w-100 h-100 gradienteAzul">
-  <audio src="/sound/unapiba.mp3" id="audioJuego"></audio>
+  <audio src="./sound/unapiba.mp3" id="audioJuego"></audio>
   <script src="audioPlay.js"></script>
   
   <div id="anim"></div>
