agrego boton on/off musica y cambio tamaños de letra

--- a/caja.html
+++ b/caja.html
@@ -11,9 +11,11 @@
 
   </head>
   <body class= "gradienteAzul">
-    <div class= "seleccionMenu">
+    
     <div id="anim" class="w-100 h-100"></div>
-      <div class = "text-center">
+
+     
+    <div class = "text-center">
 
 
 
@@ -21,7 +23,7 @@
                   <img src="img/toolkit.png" class="img-fluid" alt="Pixel art de una caja de herramientas">
                 </div>
               <div class="container-sm p-3">
-              <h1>Caja de herramientas</h1>
+              <h1 class="h1">Caja de herramientas</h1>
               <p> Una piba camina a su casa de noche es una historia interactiva desarrollada por Agus Las Peñas y Jael Caiero, desarrollada en 2021 en la cátedra de Tecnología Hipermedial de Licenciatura de Artes Electrónicas (UNTREF) e inspirada, entre otras cosas, por: </p>
               </div>
           <ul>
@@ -48,4 +50,5 @@
     </div>
   
 
-</body></html>
+</body>
+</html>
