--- a/historia.html
+++ b/historia.html
@@ -19,10 +19,17 @@
 
 <body class="w-100 h-100 gradienteAzul">
 
-<body class="w-100 h-100 gradienteAzul">
+  <div class="d-flex justify-content-end">
+  <div class="position-absolute" style="z-index: 3;">
+  <img src="img/soundoff.png" alt="" id="musicaOnOff" onclick="cambiarIconoMusica()">
+  </div>
+  </div>
+
   <audio src="./sound/unapiba.mp3" id="audioJuego"></audio>
+  
   <script src="audioPlay.js"></script>
   
+
   <div id="anim"></div>
     <main class="w-100 h-100 d-flex align-items-center justify-content-center">
     <div class="position-absolute w-100 top:0;">
