arreglo diseño en caja de herramientas

--- a/caja.html
+++ b/caja.html
@@ -15,11 +15,11 @@
     <div id="anim" class="w-100 h-100"></div>
 
      
-    <div class = "text-center">
+    <div class = "text-center p-5">
 
 
 
-                <div class = "pt-5">
+                <div class = "pt-5 img-fluid">
                   <img src="img/toolkit.png" class="img-fluid" alt="Pixel art de una caja de herramientas">
                 </div>
               <div class="container-sm p-3">
@@ -38,8 +38,9 @@
               <li><a href="http://slimedaughter.com">Porpentine</a></li>
             </ul>
             <p>¡Gracias por jugar!</p>
-            <img src="img/avatar.png" alt="Avatar de Agus y Jael"><br>
-
+            <div class="img-fluid">
+            <img src="img/avatar.png" class="img-fluid" alt="Avatar de Agus y Jael"><br>
+          </div>
             <a href="index.html">Inicio</a>
 
           
